--- a/game_styling.css
+++ b/game_styling.css
@@ -1,11 +1,7 @@
 @charset "UTF-8";
 
 /*
-  SA0001: I Sami Nachwati, 000879289 certify that this material is 
-  my original work. No other person's work has been used without due 
-  acknowledgement. I have not made my work available to anyone else.
   Author: Sami Nachwati
-  Student ID: 000879289
   File: game_styling.css
   description: the styling of the game's webpage. 
 */
@@ -100,7 +96,7 @@ footer{
     grid-row: 2;
 }
 
-#student-number{
+#rights-message{
     margin-right: 10px;
     grid-column: 4;
     grid-row: 2;
@@ -174,7 +170,7 @@ stroke-width: 80px;
     grid-row: 2;
   }
 
-  #student-number{
+  #rights-message{
     grid-column: 2;
     grid-row: 2;
   }
